[gd_scene load_steps=24 format=2]

[ext_resource path="res://enemies/HellKite/assets/suicide_spawner_enemy-Sheet.png" type="Texture" id=1]
[ext_resource path="res://enemies/HellKite/HellKite.gd" type="Script" id=2]
[ext_resource path="res://enemies/HellKite/state_machine/StateMachine.tscn" type="PackedScene" id=3]
[ext_resource path="res://utils/Plane2DMovementHelper.tscn" type="PackedScene" id=4]
[ext_resource path="res://utils/DropItemComponent.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemies/HellKite/assets/dead.png" type="Texture" id=6]
[ext_resource path="res://effects/sounds/damage_sound_scenes.tscn" type="PackedScene" id=7]
[ext_resource path="res://enemies/HellKite/assets/suicide_spawner_enemy-Sheet-exhale.png" type="Texture" id=8]
[ext_resource path="res://enemies/HellKite/Sounds/hellkite_ambient.ogg" type="AudioStream" id=9]
[ext_resource path="res://enemies/HellKite/Sounds/hellkite_exhale.ogg" type="AudioStream" id=10]
[ext_resource path="res://enemies/HellKite/Sounds/Hellkite_inhale.ogg" type="AudioStream" id=11]

[sub_resource type="AtlasTexture" id=1]
flags = 16
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=2]
flags = 16
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=3]
flags = 16
atlas = ExtResource( 1 )
region = Rect2( 800, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=4]
flags = 16
atlas = ExtResource( 1 )
region = Rect2( 1200, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=5]
flags = 16
atlas = ExtResource( 1 )
region = Rect2( 1600, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1600, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1200, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 800, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 400, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 400, 400 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "idle",
"speed": 14.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 10 ), SubResource( 11 ), SubResource( 10 ), SubResource( 11 ), SubResource( 10 ), SubResource( 11 ), SubResource( 10 ), SubResource( 11 ), SubResource( 10 ), SubResource( 11 ), SubResource( 10 ), SubResource( 11 ), SubResource( 10 ), SubResource( 11 ), SubResource( 10 ), SubResource( 11 ), SubResource( 10 ), SubResource( 11 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "exhale",
"speed": 14.0
} ]

[sub_resource type="BoxShape" id=13]
extents = Vector3( 1.59602, 1, 0.700186 )

[node name="Hellkite" type="KinematicBody"]
transform = Transform( 0.4, 0, 0, 0, 1, 0, 0, 0, 0.4, 0, 0, 0 )
collision_layer = 7
collision_mask = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite3D" parent="."]
transform = Transform( -4, 1.55766e-06, 3.40437e-14, 0, -1.74846e-07, 2, 1.55766e-06, 4, 8.74228e-08, 0, 0, 0 )
layers = 2
shaded = true
double_sided = false
frames = SubResource( 12 )
animation = "idle"
frame = 4
playing = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 3.67052, 0, 0, 0, 0.5, 0, 0, 0, 4.13938, -0.567029, 0, -2.88336 )
shape = SubResource( 13 )

[node name="Plane2DMovementHelper" parent="." instance=ExtResource( 4 )]

[node name="DropItemComponent" parent="." instance=ExtResource( 5 )]

[node name="StateMachine" parent="." instance=ExtResource( 3 )]

[node name="DamageAudioStreamPlayer3D" parent="." instance=ExtResource( 7 )]

[node name="AmbientAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 9 )
unit_db = 13.334
autoplay = true

[node name="ExhaleAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 10 )
unit_db = 22.223

[node name="InhaleAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 11 )
unit_db = 22.223

[node name="DamageSpriteModulateTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
